--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <!-- 📸 Interactive Image - Right -->
         <div class="story-image-container image-right">
           <div class="story-image-wrapper reveal-right">
-            <img src="images/about-section3-1.jpg" alt="새로운 경험" class="story-image" />
+            <img src="images/about-section3.JPG" alt="새로운 경험" class="story-image" />
             <div class="image-overlay"></div>
           </div>
         </div>
