--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
             <div class="swiper-wrapper">
               <!-- Work Card 1 -->
               <div class="swiper-slide">
-                <a href="images/work-section8.jpg" class="glightbox work-card">
+                <a href="images/work-section8.JPG" class="glightbox work-card">
                   <img
-                    src="images/work-section8.jpg"
+                    src="images/work-section8.JPG"
                     alt=""
                     class="work-image"
                   />
@@ -316,9 +316,9 @@
               </div>
               <!-- Work Card 2 -->
               <div class="swiper-slide">
-                <a href="images/work-section7.jpg" class="glightbox work-card">
+                <a href="images/work-section7.JPG" class="glightbox work-card">
                   <img
-                    src="images/work-section7.jpg"
+                    src="images/work-section7.JPG"
                     alt=""
                     class="work-image"
                   />
@@ -336,9 +336,9 @@
 
               <!-- Work Card 3 -->
               <div class="swiper-slide">
-                <a href="images/work-section9.jpg" class="glightbox work-card">
+                <a href="images/work-section9.JPG" class="glightbox work-card">
                   <img
-                    src="images/work-section9.jpg"
+                    src="images/work-section9.JPG"
                     alt=""
                     class="work-image"
                   />
@@ -396,9 +396,9 @@
 
               <!-- Work Card 6 -->
               <div class="swiper-slide">
-                <a href="images/work-section5.jpg" class="glightbox work-card">
+                <a href="images/work-section5.JPG" class="glightbox work-card">
                   <img
-                    src="images/work-section5.jpg"
+                    src="images/work-section5.JPG"
                     alt=""
                     class="work-image"
                   />
