--- a/index.html
+++ b/index.html
@@ -356,9 +356,9 @@
 
               <!-- Work Card 4 -->
               <div class="swiper-slide">
-                <a href="images/work-section4.jpg" class="glightbox work-card">
+                <a href="images/work-section4.JPG" class="glightbox work-card">
                   <img
-                    src="images/work-section4.jpg"
+                    src="images/work-section4.JPG"
                     alt="Silent Harbor"
                     class="work-image"
                   />
@@ -376,9 +376,9 @@
 
               <!-- Work Card 5 -->
               <div class="swiper-slide">
-                <a href="images/work-section6.jpg" class="glightbox work-card">
+                <a href="images/work-section6.JPG" class="glightbox work-card">
                   <img
-                    src="images/work-section6.jpg"
+                    src="images/work-section6.JPG"
                     alt=""
                     class="work-image"
                   />
@@ -476,9 +476,9 @@
 
               <!-- Work Card 10 -->
               <div class="swiper-slide">
-                <a href="images/work-section10.jpg" class="glightbox work-card">
+                <a href="images/work-section10.JPG" class="glightbox work-card">
                   <img
-                    src="images/work-section10.jpg"
+                    src="images/work-section10.JPG"
                     alt=""
                     class="work-image"
                   />
