--- a/index.html
+++ b/index.html
@@ -887,7 +887,9 @@
     </section>
     <!-- 끝 -->
 
-        <!-- Movement IV: ECHO Section -->
+<!-- ============================================
+     🎵 MOVEMENT IV: ECHO - 4악장 메아리 (개선판)
+     ============================================ -->
     <section id="movement-echo" class="movement-echo">
         <!-- Movement Header -->
         <div class="movement-header">
@@ -904,82 +906,102 @@
 
         <!-- Echo Gallery Container -->
         <div class="echo-gallery">
-            <!-- Infinite Scroll Track 1 -->
+            <!-- Track 1: 세로 사진 위주 -->
             <div class="scroll-track track-1">
                 <div class="scroll-content">
-                    <!-- 사진 쉽게 추가하는 방법: img 태그를 복사해서 추가하세요 -->
-                    <!-- 가로 사진 예시 -->
-                    <div class="echo-item landscape">
-                        <img src="images/rhapsody-section18.jpg" alt="청춘의 기록">
-                    </div>
-                    <!-- 세로 사진 예시 -->
+                    <!-- 세로 사진들 -->
                     <div class="echo-item portrait">
-                        <img src="images/rhapsody-section16.jpg" alt="청춘의 기록">
-                    </div>
-                    <div class="echo-item landscape">
-                        <img src="images/echo/friend-03.jpg" alt="청춘의 기록">
+                        <img src="images/rhapsody-section16.jpg" alt="청춘의 순간 #1">
                     </div>
                     <div class="echo-item portrait">
-                        <img src="images/echo/friend-04.jpg" alt="청춘의 기록">
-                    </div>
-                    <div class="echo-item landscape">
-                        <img src="images/echo/friend-05.jpg" alt="청춘의 기록">
+                        <img src="images/rhapsody-section17.jpg" alt="청춘의 순간 #2">
                     </div>
                     <div class="echo-item portrait">
-                        <img src="images/echo/friend-06.jpg" alt="청춘의 기록">
+                        <img src="images/echo/friend-01.jpg" alt="청춘의 순간 #3">
                     </div>
-                    <!-- 더 많은 사진 추가 가능 -->
+                    <div class="echo-item landscape">
+                        <img src="images/rhapsody-section18.jpg" alt="청춘의 순간 #4">
+                    </div>
+                    <div class="echo-item portrait">
+                        <img src="images/echo/friend-02.jpg" alt="청춘의 순간 #5">
+                    </div>
+                    <div class="echo-item portrait">
+                        <img src="images/echo/friend-03.jpg" alt="청춘의 순간 #6">
+                    </div>
+                    <div class="echo-item portrait">
+                        <img src="images/echo/friend-04.jpg" alt="청춘의 순간 #7">
+                    </div>
+                    <div class="echo-item landscape">
+                        <img src="images/echo/friend-05.jpg" alt="청춘의 순간 #8">
+                    </div>
+                    <div class="echo-item portrait">
+                        <img src="images/echo/friend-06.jpg" alt="청춘의 순간 #9">
+                    </div>
                 </div>
                 <!-- 무한 반복을 위한 복제본 (자동 생성됨) -->
                 <div class="scroll-content-clone"></div>
             </div>
 
-            <!-- Infinite Scroll Track 2 (역방향) -->
+            <!-- Track 2: 가로 사진 위주 (역방향) -->
             <div class="scroll-track track-2">
                 <div class="scroll-content">
-                    <div class="echo-item portrait">
-                        <img src="images/echo/friend-07.jpg" alt="청춘의 기록">
+                    <!-- 가로 사진들 -->
+                    <div class="echo-item landscape">
+                        <img src="images/echo/friend-07.jpg" alt="우리의 기억 #1">
                     </div>
                     <div class="echo-item landscape">
-                        <img src="images/echo/friend-08.jpg" alt="청춘의 기록">
+                        <img src="images/echo/friend-08.jpg" alt="우리의 기억 #2">
                     </div>
                     <div class="echo-item portrait">
-                        <img src="images/echo/friend-09.jpg" alt="청춘의 기록">
+                        <img src="images/echo/friend-09.jpg" alt="우리의 기억 #3">
                     </div>
                     <div class="echo-item landscape">
-                        <img src="images/echo/friend-10.jpg" alt="청춘의 기록">
+                        <img src="images/echo/friend-10.jpg" alt="우리의 기억 #4">
+                    </div>
+                    <div class="echo-item landscape">
+                        <img src="images/echo/friend-11.jpg" alt="우리의 기억 #5">
+                    </div>
+                    <div class="echo-item landscape">
+                        <img src="images/echo/friend-12.jpg" alt="우리의 기억 #6">
                     </div>
                     <div class="echo-item portrait">
-                        <img src="images/echo/friend-11.jpg" alt="청춘의 기록">
+                        <img src="images/echo/friend-13.jpg" alt="우리의 기억 #7">
                     </div>
                     <div class="echo-item landscape">
-                        <img src="images/echo/friend-12.jpg" alt="청춘의 기록">
+                        <img src="images/echo/friend-14.jpg" alt="우리의 기억 #8">
                     </div>
                 </div>
                 <!-- 무한 반복을 위한 복제본 (자동 생성됨) -->
                 <div class="scroll-content-clone"></div>
             </div>
 
-            <!-- Infinite Scroll Track 3 -->
+            <!-- Track 3: 세로 사진 위주 -->
             <div class="scroll-track track-3">
                 <div class="scroll-content">
-                    <div class="echo-item landscape">
-                        <img src="images/echo/friend-13.jpg" alt="청춘의 기록">
+                    <!-- 세로 사진들 -->
+                    <div class="echo-item portrait">
+                        <img src="images/echo/friend-15.jpg" alt="함께한 날들 #1">
                     </div>
                     <div class="echo-item portrait">
-                        <img src="images/echo/friend-14.jpg" alt="청춘의 기록">
+                        <img src="images/echo/friend-16.jpg" alt="함께한 날들 #2">
                     </div>
                     <div class="echo-item landscape">
-                        <img src="images/echo/friend-15.jpg" alt="청춘의 기록">
+                        <img src="images/echo/friend-17.jpg" alt="함께한 날들 #3">
                     </div>
                     <div class="echo-item portrait">
-                        <img src="images/echo/friend-16.jpg" alt="청춘의 기록">
+                        <img src="images/echo/friend-18.jpg" alt="함께한 날들 #4">
+                    </div>
+                    <div class="echo-item portrait">
+                        <img src="images/echo/friend-19.jpg" alt="함께한 날들 #5">
+                    </div>
+                    <div class="echo-item portrait">
+                        <img src="images/echo/friend-20.jpg" alt="함께한 날들 #6">
                     </div>
                     <div class="echo-item landscape">
-                        <img src="images/echo/friend-17.jpg" alt="청춘의 기록">
+                        <img src="images/echo/friend-21.jpg" alt="함께한 날들 #7">
                     </div>
                     <div class="echo-item portrait">
-                        <img src="images/echo/friend-18.jpg" alt="청춘의 기록">
+                        <img src="images/echo/friend-22.jpg" alt="함께한 날들 #8">
                     </div>
                 </div>
                 <!-- 무한 반복을 위한 복제본 (자동 생성됨) -->
