--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
             <div class="swiper-wrapper">
               <!-- Work Card 1 -->
               <div class="swiper-slide">
-                <a href="images/work-section8.JPG" class="glightbox work-card">
+                <a href="images/work-section8.jpg" class="glightbox work-card">
                   <img
-                    src="images/work-section8.JPG"
+                    src="images/work-section8.jpg"
                     alt=""
                     class="work-image"
                   />
@@ -316,9 +316,9 @@
               </div>
               <!-- Work Card 2 -->
               <div class="swiper-slide">
-                <a href="images/work-section7.JPG" class="glightbox work-card">
+                <a href="images/work-section7.jpg" class="glightbox work-card">
                   <img
-                    src="images/work-section7.JPG"
+                    src="images/work-section7.jpg"
                     alt=""
                     class="work-image"
                   />
@@ -336,9 +336,9 @@
 
               <!-- Work Card 3 -->
               <div class="swiper-slide">
-                <a href="images/work-section9.JPG" class="glightbox work-card">
+                <a href="images/work-section9.jpg" class="glightbox work-card">
                   <img
-                    src="images/work-section9.JPG"
+                    src="images/work-section9.jpg"
                     alt=""
                     class="work-image"
                   />
@@ -356,9 +356,9 @@
 
               <!-- Work Card 4 -->
               <div class="swiper-slide">
-                <a href="images/work-section4.JPG" class="glightbox work-card">
+                <a href="images/work-section4.jpg" class="glightbox work-card">
                   <img
-                    src="images/work-section4.JPG"
+                    src="images/work-section4.jpg"
                     alt="Silent Harbor"
                     class="work-image"
                   />
@@ -376,9 +376,9 @@
 
               <!-- Work Card 5 -->
               <div class="swiper-slide">
-                <a href="images/work-section6.JPG" class="glightbox work-card">
+                <a href="images/work-section6.jpg" class="glightbox work-card">
                   <img
-                    src="images/work-section6.JPG"
+                    src="images/work-section6.jpg"
                     alt=""
                     class="work-image"
                   />
@@ -396,9 +396,9 @@
 
               <!-- Work Card 6 -->
               <div class="swiper-slide">
-                <a href="images/work-section5.JPG" class="glightbox work-card">
+                <a href="images/work-section5.jpg" class="glightbox work-card">
                   <img
-                    src="images/work-section5.JPG"
+                    src="images/work-section5.jpg"
                     alt=""
                     class="work-image"
                   />
@@ -476,9 +476,9 @@
 
               <!-- Work Card 10 -->
               <div class="swiper-slide">
-                <a href="images/work-section10.JPG" class="glightbox work-card">
+                <a href="images/work-section10.jpg" class="glightbox work-card">
                   <img
-                    src="images/work-section10.JPG"
+                    src="images/work-section10.jpg"
                     alt=""
                     class="work-image"
                   />
