--- a/index.html
+++ b/index.html
@@ -888,150 +888,98 @@
     <!-- 끝 -->
 
 <!-- ============================================
-     🎵 MOVEMENT IV: ECHO - 4악장 메아리 (개선판)
+     🎵 MOVEMENT IV: ECHO - 완벽한 무한 스크롤
+     JavaScript 방식 - 끊김 완전 제거
      ============================================ -->
-    <section id="movement-echo" class="movement-echo">
-        <!-- Movement Header -->
-        <div class="movement-header">
-            <span class="movement-label">Movement IV</span>
-            <h2 class="movement-title">
-                ECHO
-                <span class="subtitle">메아리 · 反響</span>
-            </h2>
-            <p class="movement-description">
-                우리의 청춘은 메아리처럼 돌아온다<br>
-                실패해도, 도전해도, 다시 울려 퍼지는 우리들의 이야기
-            </p>
-        </div>
-
-        <!-- Echo Gallery Container -->
-        <div class="echo-gallery">
-            <!-- Track 1: 세로 사진 위주 -->
-            <div class="scroll-track track-1">
-                <div class="scroll-content">
-                    <!-- 세로 사진들 -->
-                    <div class="echo-item portrait">
-                        <img src="images/rhapsody-section16.jpg" alt="청춘의 순간 #1">
-                    </div>
-                    <div class="echo-item portrait">
-                        <img src="images/rhapsody-section17.jpg" alt="청춘의 순간 #2">
-                    </div>
-                    <div class="echo-item portrait">
-                        <img src="images/echo/friend-01.jpg" alt="청춘의 순간 #3">
-                    </div>
-                    <div class="echo-item landscape">
-                        <img src="images/rhapsody-section18.jpg" alt="청춘의 순간 #4">
-                    </div>
-                    <div class="echo-item portrait">
-                        <img src="images/echo/friend-02.jpg" alt="청춘의 순간 #5">
-                    </div>
-                    <div class="echo-item portrait">
-                        <img src="images/echo/friend-03.jpg" alt="청춘의 순간 #6">
-                    </div>
-                    <div class="echo-item portrait">
-                        <img src="images/echo/friend-04.jpg" alt="청춘의 순간 #7">
-                    </div>
-                    <div class="echo-item landscape">
-                        <img src="images/echo/friend-05.jpg" alt="청춘의 순간 #8">
-                    </div>
-                    <div class="echo-item portrait">
-                        <img src="images/echo/friend-06.jpg" alt="청춘의 순간 #9">
-                    </div>
-                </div>
-                <!-- 무한 반복을 위한 복제본 (자동 생성됨) -->
-                <div class="scroll-content-clone"></div>
-            </div>
-
-            <!-- Track 2: 가로 사진 위주 (역방향) -->
-            <div class="scroll-track track-2">
-                <div class="scroll-content">
-                    <!-- 가로 사진들 -->
-                    <div class="echo-item landscape">
-                        <img src="images/echo/friend-07.jpg" alt="우리의 기억 #1">
-                    </div>
-                    <div class="echo-item landscape">
-                        <img src="images/echo/friend-08.jpg" alt="우리의 기억 #2">
-                    </div>
-                    <div class="echo-item portrait">
-                        <img src="images/echo/friend-09.jpg" alt="우리의 기억 #3">
-                    </div>
-                    <div class="echo-item landscape">
-                        <img src="images/echo/friend-10.jpg" alt="우리의 기억 #4">
-                    </div>
-                    <div class="echo-item landscape">
-                        <img src="images/echo/friend-11.jpg" alt="우리의 기억 #5">
-                    </div>
-                    <div class="echo-item landscape">
-                        <img src="images/echo/friend-12.jpg" alt="우리의 기억 #6">
-                    </div>
-                    <div class="echo-item portrait">
-                        <img src="images/echo/friend-13.jpg" alt="우리의 기억 #7">
-                    </div>
-                    <div class="echo-item landscape">
-                        <img src="images/echo/friend-14.jpg" alt="우리의 기억 #8">
-                    </div>
-                </div>
-                <!-- 무한 반복을 위한 복제본 (자동 생성됨) -->
-                <div class="scroll-content-clone"></div>
-            </div>
-
-            <!-- Track 3: 세로 사진 위주 -->
-            <div class="scroll-track track-3">
-                <div class="scroll-content">
-                    <!-- 세로 사진들 -->
-                    <div class="echo-item portrait">
-                        <img src="images/echo/friend-15.jpg" alt="함께한 날들 #1">
-                    </div>
-                    <div class="echo-item portrait">
-                        <img src="images/echo/friend-16.jpg" alt="함께한 날들 #2">
-                    </div>
-                    <div class="echo-item landscape">
-                        <img src="images/echo/friend-17.jpg" alt="함께한 날들 #3">
-                    </div>
-                    <div class="echo-item portrait">
-                        <img src="images/echo/friend-18.jpg" alt="함께한 날들 #4">
-                    </div>
-                    <div class="echo-item portrait">
-                        <img src="images/echo/friend-19.jpg" alt="함께한 날들 #5">
-                    </div>
-                    <div class="echo-item portrait">
-                        <img src="images/echo/friend-20.jpg" alt="함께한 날들 #6">
-                    </div>
-                    <div class="echo-item landscape">
-                        <img src="images/echo/friend-21.jpg" alt="함께한 날들 #7">
-                    </div>
-                    <div class="echo-item portrait">
-                        <img src="images/echo/friend-22.jpg" alt="함께한 날들 #8">
-                    </div>
-                </div>
-                <!-- 무한 반복을 위한 복제본 (자동 생성됨) -->
-                <div class="scroll-content-clone"></div>
-            </div>
-        </div>
-
-        <!-- Echo Message -->
-        <div class="echo-message">
-            <p class="echo-quote">
-                "우리의 순간들이 메아리가 되어<br>
-                시간을 넘어 계속 울려 퍼지길"
-            </p>
-        </div>
-    </section>
-
-    <!-- 컨택트섹션 -->
-    <section
-      id="contact"
-      class="content-section"
-      style="background-color: #b5b5b5"
-    >
-      <div class="section-content">
-        <h2>Contact</h2>
-        <p>
-          이곳에 Contact 내용을 작성합니다. <br />
-          스크롤 테스트를 위한 데모 콘텐츠입니다.
+<section id="movement-echo" class="movement-echo">
+    <!-- Movement Header -->
+    <div class="movement-header">
+        <span class="movement-label">Movement IV</span>
+        <h2 class="movement-title">
+            ECHO
+            <span class="subtitle">메아리 · 反響</span>
+        </h2>
+        <p class="movement-description">
+            우리의 청춘은 메아리처럼 돌아온다<br>
+            실패해도, 도전해도, 다시 울려 퍼지는 우리들의 이야기
         </p>
-      </div>
-    </section>
+    </div>
+
+    <!-- Echo Gallery Container -->
+    <div class="echo-gallery">
+        <!-- ============================================
+             Track 3: 세로 사진 전용 (Portrait Only)
+             ============================================ -->
+        <div class="scroll-track track-3" data-speed="-0.4" data-direction="reverse">
+            <div class="scroll-track-inner">
+                <!-- 이미지들 - JS가 자동으로 복제합니다 -->
+                <div class="echo-item portrait">
+                    <img src="images/echo-sectionv1.jpg" alt="함께한 날들 #1">
+                </div>
+                <div class="echo-item portrait">
+                    <img src="images/echo-sectionv2.jpg" alt="함께한 날들 #2">
+                </div>
+                <div class="echo-item portrait">
+                    <img src="images/echo-sectionv3.jpg" alt="함께한 날들 #3">
+                </div>
+                <div class="echo-item portrait">
+                    <img src="images/echo-sectionv4.jpg" alt="함께한 날들 #4">
+                </div>
+                <div class="echo-item portrait">
+                    <img src="images/echo-sectionv5.jpg" alt="함께한 날들 #5">
+                </div>
+                <div class="echo-item portrait">
+                    <img src="images/echo-sectionv6.jpg" alt="함께한 날들 #6">
+                </div>
+                <div class="echo-item portrait">
+                    <img src="images/echo-sectionv7.jpg" alt="함께한 날들 #7">
+                </div>
+                <div class="echo-item portrait">
+                    <img src="images/echo-sectionv8.jpg" alt="함께한 날들 #8">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Echo Message -->
+    <div class="echo-message">
+        <p class="echo-quote">
+            "우리의 순간들이 메아리가 되어<br>
+            시간을 넘어 계속 울려 퍼지길"
+        </p>
+    </div>
+
+    <!-- Echo Gallery Container 계속 -->
+    <div class="echo-gallery">
+        <!-- ============================================
+             Track 2: 가로 사진 전용 (Landscape Only)
+             ============================================ -->
+        <div class="scroll-track track-2" data-speed="0.5">
+            <div class="scroll-track-inner">
+                <!-- 이미지들 - JS가 자동으로 복제합니다 -->
+                <div class="echo-item landscape">
+                    <img src="images/echo-section1.jpg" alt="우리의 기억 #1">
+                </div>
+                <div class="echo-item landscape">
+                    <img src="images/echo-section2.jpg" alt="우리의 기억 #2">
+                </div>
+                <div class="echo-item landscape">
+                    <img src="images/echo-section3.jpg" alt="우리의 기억 #3">
+                </div>
+                <div class="echo-item landscape">
+                    <img src="images/echo-section4.jpg" alt="우리의 기억 #4">
+                </div>
+                <div class="echo-item landscape">
+                    <img src="images/echo-section5.jpg" alt="우리의 기억 #5">
+                </div>
+                <div class="echo-item landscape">
+                    <img src="images/echo-section6.jpg" alt="우리의 기억 #6">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
     <nav id="nav-bar" aria-label="주요 내비게이션">
       <ul>
