--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
             <div class="swiper-wrapper">
               <!-- Work Card 1 -->
               <div class="swiper-slide">
-                <a href="images/work-section1.Jpg" class="glightbox work-card">
+                <a href="images/work-section1.png" class="glightbox work-card">
                   <img
-                    src="images/work-section1.Jpg"
+                    src="images/work-section1.png"
                     alt=""
                     class="work-image"
                   />
@@ -316,9 +316,9 @@
               </div>
               <!-- Work Card 2 -->
               <div class="swiper-slide">
-                <a href="images/work-section2.Jpg" class="glightbox work-card">
+                <a href="images/work-section2.png" class="glightbox work-card">
                   <img
-                    src="images/work-section2.Jpg"
+                    src="images/work-section2.png"
                     alt=""
                     class="work-image"
                   />
@@ -336,9 +336,9 @@
 
               <!-- Work Card 3 -->
               <div class="swiper-slide">
-                <a href="images/work-section6.Jpg" class="glightbox work-card">
+                <a href="images/work-section6.png" class="glightbox work-card">
                   <img
-                    src="images/work-section6.Jpg"
+                    src="images/work-section6.png"
                     alt=""
                     class="work-image"
                   />
@@ -356,9 +356,9 @@
 
               <!-- Work Card 4 -->
               <div class="swiper-slide">
-                <a href="images/work-section4.Jpg" class="glightbox work-card">
+                <a href="images/work-section4.png" class="glightbox work-card">
                   <img
-                    src="images/work-section4.Jpg"
+                    src="images/work-section4.png"
                     alt="Silent Harbor"
                     class="work-image"
                   />
@@ -376,9 +376,9 @@
 
               <!-- Work Card 5 -->
               <div class="swiper-slide">
-                <a href="images/work-section5.Jpg" class="glightbox work-card">
+                <a href="images/work-section5.png" class="glightbox work-card">
                   <img
-                    src="images/work-section5.Jpg"
+                    src="images/work-section5.png"
                     alt=""
                     class="work-image"
                   />
@@ -396,9 +396,9 @@
 
               <!-- Work Card 6 -->
               <div class="swiper-slide">
-                <a href="images/work-section3.Jpg" class="glightbox work-card">
+                <a href="images/work-section3.png" class="glightbox work-card">
                   <img
-                    src="images/work-section3.Jpg"
+                    src="images/work-section3.png"
                     alt=""
                     class="work-image"
                   />
@@ -476,9 +476,9 @@
 
               <!-- Work Card 10 -->
               <div class="swiper-slide">
-                <a href="images/work-section10.Jpg" class="glightbox work-card">
+                <a href="images/work-section10.png" class="glightbox work-card">
                   <img
-                    src="images/work-section10.Jpg"
+                    src="images/work-section10.png"
                     alt=""
                     class="work-image"
                   />
