--- a/index.html
+++ b/index.html
@@ -276,20 +276,19 @@
       </div>
     </section>
 
-    <!-- ============================================
-         🎵 WORKS SECTION - 15개 카드로 확장
-         ============================================ -->
-    <section id="works">
-      <!-- Movement I: 정적 (Static) - Blur 효과 적용 -->
-      <div class="movement-section movement-works">
-        <div class="movement-header">
-          <span class="movement-label">Movement I 정적</span>
-          <h2 class="movement-title">Stillness</h2>
-          <p class="movement-description">
-            소리 없는 순간들이 남긴 울림<br />
-            고요 속에 담아낸 빛의 언어
-          </p>
-        </div>
+<!-- ============================================
+     MOVEMENT I: STILLNESS (정적)
+     ============================================ -->
+<section id="works" class="movement-section">
+  <div class="movement-header">
+    <div class="movement-label">MOVEMENT I</div>
+    <h2 class="movement-title">STILLNESS</h2>
+    <div class="subtitle">정적 · 靜寂</div>
+    <p class="movement-description">
+      고요 속에서 발견하는 형태<br>
+      정적은 침묵이 아닌, 모든 소리의 시작점
+    </p>
+  </div>
 
         <!-- Swiper Carousel -->
         <div class="works-carousel-wrapper">
@@ -495,27 +494,25 @@
               </div>
             </div>
 
-            <!-- Navigation -->
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-
-            <!-- Pagination -->
-            <div class="swiper-pagination"></div>
+            <!--work끝 -->
           </div>
         </div>
       </div>
     </section>
 
-    <!-- 🎵 Movement II - Crescendo Section (카테고리 제거, 15개 이미지) -->
-    <div class="movement-section movement-crescendo" id="movement-crescendo">
-      <div class="movement-header">
-        <span class="movement-label">Movement II 크레센도</span>
-        <h2 class="movement-title">Crescendo</h2>
-        <p class="movement-description">
-          흑백에서 컬러로, 정적에서 동적으로<br />
-          점진적으로 강해지는 감정의 고조
-        </p>
-      </div>
+<!-- ============================================
+     MOVEMENT II: CRESCENDO (크레센도)
+     ============================================ -->
+<section class="movement-crescendo">
+  <div class="movement-header">
+    <div class="movement-label">MOVEMENT II</div>
+    <h2 class="movement-title">CRESCENDO</h2>
+    <div class="subtitle">크레센도 · 漸強</div>
+    <p class="movement-description">
+      시간이 흐르며 변화하는 순간들<br>
+      점진적으로 강렬해지는 감정의 여정
+    </p>
+  </div>
 
       <!-- 메인 이미지 뷰어 (Before/After 효과) -->
       <div class="crescendo-main-viewer">
@@ -859,20 +856,21 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
-    <!-- 🎼 MOVEMENT III - RHAPSODY SECTION (v3.0) -->
-    <!-- 세로로 긴 스크롤 갤러리 버전 -->
-    <section id="rhapsody" class="movement-rhapsody">
-      <!-- 섹션 헤더 -->
-      <div class="rhapsody-header">
-        <span class="rhapsody-label">Movement III</span>
-        <h2 class="rhapsody-title">Rhapsody</h2>
-        <p class="rhapsody-description">
-          형식에 얽매이지 않는 자유로운 표현의 향연<br />
-          각각의 순간이 독립적이면서도 하나의 흐름으로 연결되는 시각적 즉흥곡
-        </p>
-      </div>
+<!-- ============================================
+     MOVEMENT III: RHAPSODY (랩소디)
+     ============================================ -->
+  <section class="movement-rhapsody">
+  <div class="rhapsody-header">
+    <div class="rhapsody-label">MOVEMENT III</div>
+    <h2 class="rhapsody-title">RHAPSODY</h2>
+    <div class="subtitle">랩소디 · 狂詩曲</div>
+    <p class="rhapsody-description">
+      자유로운 형식 속의 서사<br>
+      순간들이 엮어내는 예측 불가능한 서사시
+    </p>
+  </div>
 
       <!-- 스크롤 인디케이터 -->
       <div class="rhapsody-scroll-indicator">
@@ -944,8 +942,8 @@
     <!-- Echo Message -->
     <div class="echo-message">
         <p class="echo-quote">
-            "우리의 순간들이 메아리가 되어<br>
-            시간을 넘어 계속 울려 퍼지길"
+            "우리의 청춘이 메아리 되어<br>
+            계속 울려 퍼지길"
         </p>
     </div>
 
@@ -1051,28 +1049,7 @@
           </div>
         </div>
 
-        <div class="panel-text-right">
-          <p>안녕하세요! 저는 크리에이티브 디자이너입니다.</p>
-          <p>
-            시각적 스토리텔링과 인터랙티브 경험을 통해<br />감동을 전달하는 것을
-            좋아합니다.
-          </p>
-          <div class="panel-details">
-            <div class="detail-item">
-              <h3>Skills</h3>
-              <p>
-                UI/UX Design, Web Development,<br />Motion Graphics, Brand
-                Identity
-              </p>
-            </div>
-            <div class="detail-item">
-              <h3>Experience</h3>
-              <p>
-                5+ years in creative industry<br />Working with global brands
-              </p>
-            </div>
-          </div>
-        </div>
+      <!-- 끝 -->
       </div>
     </div>
 
